# katt

./: Configuration.hs  Init.hs  LICENSE  LanguageIdentification.hs  Main.hs  README.md  SourceHandler.hs  Upload.hs  Utils.hs  katt.cabal  sofie.cabal  thoughts
binaries/linux-x64/: info  katt
katt-cli/src/: Main.hs
katt-lib/src/Utils/Katt/: Configuration.hs  Init.hs  SourceHandler.hs  Upload.hs  Utils.hs
katt-tests/data/sample_submissions/c/: clean-header.h  clean-hello-world.c
katt-tests/data/sample_submissions/c++/: clean-header.h  clean-hello-world.cpp
katt-tests/data/sample_submissions/java/: CleanHelloWorld.java  MultiCommentHelloWorld.java  SingleCommentHelloWorld.java
katt-tests/src/: TestInit.hs  TestSourceHandler.hs
src/: Configuration.hs  Init.hs  Main.hs  SourceHandler.hs  Upload.hs  Utils.hs
