name:                sofie
version:             0.1.0.0
stability:           experimental

synopsis:            Client for the Kattis judge system.
description:         TODO description.

homepage:            https://github.com/davnils/sofie
bug-reports:         https://github.com/davnils/sofie/issues

license:             BSD3
license-file:        LICENSE

author:              David Nilsson
maintainer:          nilsson.dd+code@gmail.com

category:            Utils

build-type:          Simple
cabal-version:       >=1.8


executable sofie
  hs-source-dirs:    src
  main-is:           Main.hs
  other-modules:     Init, Upload, Configuration, Utils, SourceHandler
  ghc-options:       -O2 -threaded -Wall
  
  build-depends:     base >= 4.5 && <= 4.6,
                     blaze-builder >= 0.3.1.1,
                     bytestring >= 0.9.2.1,
                     directory >= 1.2 && < 1.3,
                     ConfigFile >= 1.1 && < 1.2,
                     errors >= 1.4 && < 1.5,
                     http-streams >= 0.6 && < 0.7,
                     HsOpenSSL >= 0.10.3 && < 0.11,
                     io-streams,
                     mtl >= 2.1 && < 2.2,
                     parsec >= 3.1 && < 3.2,
                     regex-posix >= 0.95 && < 0.96,
                     unix >= 2.6 && < 2.7,
                     url >= 2.1 && < 2.2,
                     zip-archive >= 0.1 && < 0.2
